--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   
         <div id="qrcode" class="my-0.5"></div>
         <button type="button" id="download">Baixar</button>
+        teste
     </div>
 </body>
 </html>
